--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,29 @@ header {
     grid-area: hd;
     background-color: aqua;
 }
+header h1 {
+    text-align: center;
+}
+
+nav {
+    display: flex;
+    justify-content: flex-end;
+}
+
+nav ul {
+display: flex;
+}
+
+nav ul li {
+    list-style: none;
+    margin: 1rem 0.5rem 1rem 0.5rem;
+}
+
+nav ul li a {
+    color: black;
+    text-decoration: none;
+}
+
 
 main {
     grid-area: main;
@@ -22,6 +45,14 @@ footer {
     grid-area: ft;
     background-color: darksalmon;
 }
+
+@media screen and (max-width:600px) {
+body {
+    background-color: pink;
+}
+}
+    
+
 
 #cardwrapper {
     display: flex;
